Introduce FilterBuilder, TableQueryOptimizerSinglePerAggregator does not optimize the big OR